feat: add route to get expenses by month with corresponding use case and Swagger documentation Close #3
